--- a/public/css/app.css
+++ b/public/css/app.css
@@ -111,3 +111,31 @@ section > h1 {
 section main {
   flex: 1;
 }
+
+.message-modal, 
+.confirmation-modal {
+  padding: 20px;
+  z-index: 100;
+  max-width: 500px;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  gap: 0px;
+} 
+.message-modal h1, 
+.confirmation-modal h1 {
+  font-size: 1.7rem;
+  margin-bottom: 8px;
+}
+
+.message-modal p,
+.confirmation-modal p {
+  font-size: 1.3rem;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.message-modal .close-button, 
+.confirmation-modal .confirm button {
+  font-size: 1.4rem;
+}
