--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -92,9 +92,52 @@ main .flavor-container .flavor:hover {
   background-color: var(--dark-primary-color);
 }
 
-main .quick-controls-container {
-
+main .sales-amount-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
+
+main .sales-amount-container .amount-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+main .sales-amount-container .amount-container > div {
+  background-color: var(--primary-color);
+  border-radius: 8px;
+  color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  box-sizing: border-box;
+}
+
+.amount-container > div > h2,
+.amount-container > div > p {
+  margin: 0;
+  box-sizing: border-box;
+  max-width: 100%; /* Ensures text doesn’t expand beyond container */
+  overflow-wrap: break-word; /* Breaks text if it's too long */
+  white-space: normal; /* Prevents text from overflowing */
+  text-align: center;
+}
+
+.amount-container > div > h2 {
+  font-size: 1.3rem;
+  color: rgb(161, 159, 159);
+  text-align: left;
+}
+
+.amount-container > div > p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-align: left;
+}
+
 
 main .low-stock-ingredients-container {
   display: flex;
