--- a/public/css/flavor.css
+++ b/public/css/flavor.css
@@ -74,7 +74,7 @@ dialog::backdrop {
 }
 
 dialog.open {
-  display: block;
+  display: flex;
 }
 
 dialog.showing {
@@ -89,6 +89,11 @@ dialog.closing {
 
 dialog > h2 {
   margin-bottom: 12px;
+}
+
+#edit_flavor_modal, 
+#add_flavor_modal {
+  flex-direction: column;
 }
 
 .add-flavor-form .text-field input,
