--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -5,7 +5,7 @@ main {
   overflow-y: auto;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(4, 245px);
+  grid-template-rows: repeat(5, 245px);
 }
 
 main .grid-item {
@@ -64,6 +64,7 @@ main .top-selling-flavor-container {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  grid-column: span 2;
 }
 
 main .top-selling-flavor-container .flavor-container {
@@ -179,4 +180,57 @@ main .low-stock-ingredients-container {
 
 .ingredient-container table tbody tr:hover {
   background-color: #c6c2c2;
+}
+
+main .quick-controls-container {
+  grid-row: 1 / 2;
+  grid-column: 1 / -1;
+  max-height: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.quick-controls-container .quick-cotrols-btn-container {
+  flex: 1;
+  display: flex;
+  gap: 20px;
+  border-radius: 8px;
+}
+
+.quick-cotrols-btn-container .quick-control-btn {
+  flex: 1;
+  background-color: f1f1f1;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  background-color: var(--primary-color);
+  align-items: center;
+  padding: 0px 20px;
+  gap: 12px;
+}
+
+.quick-cotrols-btn-container .quick-control-btn:hover {
+  background-color: var(--dark-primary-color);
+}
+
+.quick-cotrols-btn-container .quick-control-btn .icon-container {
+  width: 50px;
+}
+
+.quick-control-btn .icon-container svg {
+  max-width: 100%;
+}
+
+
+
+.quick-cotrols-btn-container .quick-control-btn p {
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 700;
+  flex: 1;
+}
+
+#myChart {
+  max-height: 100%;
 }
