--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -232,3 +232,220 @@ main .quick-controls-container {
 #myChart {
   max-height: 100%;
 }
+
+#add_stock_modal {
+  flex-direction: column;
+}
+
+#add_stock_modal > h2 {
+  margin-bottom: 12px;
+}
+
+.add-stock-form .text-field input,
+.add-stock-form .text-field select {
+  width: 100%;
+  outline: none;
+  border: 1px solid #D9D9D9;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  padding: 8px 12px;
+}
+
+.add-stock-form .btn-container {
+  width: 100%;
+  grid-column: 2 / -1;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 8px;
+}
+
+.add-stock-form .btn-container button {
+  width: 100%;
+  font-size: 0.9rem;
+  padding: 12px;
+  border-radius: 8px;
+  border: none;
+}
+
+.add-stock-form .btn-container button[type='button']:hover {
+  background-color: #c6c2c2;
+}
+
+.add-stock-form .btn-container button[type='submit'] {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+.add-stock-form .btn-container button[type='submit']:hover {
+  background-color: var(--dark-primary-color);
+}
+
+.add-stock-form {
+  max-width: 600px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px 16px;
+}
+
+.add-stock-form .text-field:nth-child(1) {
+  grid-column: span 2;
+}
+
+.add_order_modal {
+  background-color: white;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  padding: 16px 32px 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  transition: all 0.3s ease-out;
+  display: flex;
+  gap: 32px;
+  background-color: transparent;
+  display: none;
+}
+
+dialog .add-order-form {
+  width: 700px;
+  display: flex;
+  gap: 20px;
+}
+
+dialog .add-order-form .customer-info,
+dialog .add-order-form .order-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+dialog .add-order-form .customer-info > div,
+dialog .add-order-form .order-info > div {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 1;
+}
+
+#add_order_modal form {
+  background-color: white;
+  padding: 16px 32px;
+  border-radius: 8px;
+}
+
+#add_order_modal .upcomming-order-div {
+  width: 300px;
+  max-width: 300px;
+  background-color: white;
+  padding: 16px 32px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+
+#add_order_modal .upcomming-order-div .upcomming-order-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  overflow: auto;
+  border-radius: 8px;
+  flex: 1;
+  padding: 0px 8px;
+  max-height: 363px;
+}
+
+.upcomming-order-container .order {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 8px;
+  border: none;
+  padding: 16px;
+  background-color: var(--primary-color);
+  color: white;
+  transition: all 0.3s;
+}
+
+.upcomming-order-container .order:hover {
+  background-color: var(--dark-primary-color);
+}
+
+.upcomming-order-container .order button {
+  border-radius: 90px;
+  border: none;
+  background-color: transparent;
+  font-size: 1.3rem;
+  color: white;
+}
+
+.upcomming-order-container .order button:hover {
+  font-weight: 700;
+}
+
+.add-order-form .input-field input,
+.add-order-form .input-field select {
+  width: 100%;
+  outline: none;
+  border: 1px solid #D9D9D9;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  padding: 8px 12px;
+}
+
+.add-order-form .btn-container {
+  padding-top: 12px;
+  width: 100%;
+  grid-column: 2 / -1;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 8px;
+  flex: 1;
+}
+
+.add-order-form .btn-container button,
+.upcomming-order-div .btn-container button {
+  font-size: 0.9rem;
+  padding: 12px;
+  width: 100%;
+  border-radius: 8px;
+  border: none;
+}
+
+.add-order-form .btn-container button[type='button']:hover {
+  background-color: #c6c2c2;
+}
+
+.add-order-form .btn-container #add_order_btn,
+.upcomming-order-div .btn-container button {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+.add-order-form .btn-container #add_order_btn:hover {
+  background-color: var(--dark-primary-color);
+}
+
+.upcomming-order-div .btn-container #confirm_orders {
+  font-size: 1.3rem;
+}
+
+.datetime-field {
+  display: flex;
+  gap: 8px;
+}
+
+.datetime-field input:nth-child(1) {
+  flex: 2;
+}
+
+.datetime-field input:nth-child(2) {
+  flex: 1;
+}
