--- a/public/css/order.css
+++ b/public/css/order.css
@@ -11,7 +11,6 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: end;
-      padding: 0px 8px 0px 0px;
     }
 
     main .orders-container {
@@ -34,9 +33,10 @@
       border-radius: 8px;
     }
 
-    .btn-container .category-btns-container {
+    .btn-container .category-btns-container{
       display: flex;
       gap: 16px;
+      padding: 8px 16px;
     }
 
     .btn-container .category-btns-container button {
@@ -45,6 +45,7 @@
       border-bottom: 3px solid #24304136;
       color: #24304136;
       padding: 4px;
+      font-size: 1.05rem;
     }
 
     .btn-container .category-btns-container button:hover {
