some error handling

--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -97,6 +97,10 @@ dialog.open {
   display: block;
 }
 
+#message_modal.open {
+  display: flex;
+}
+
 #confirmation_modal.open {
   display: flex;
 }
