--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,21 +5,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--primary-color);
 }
 
+/* 
 .wrapper::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+   height: 100%;
   background-image: url('../images/Scoops-kinds-ice-cream.webp');
   background-size: cover;
   background-position: center;
   filter: blur(2px);
   z-index: -1;
-}
+  background-color: var(--primary-color);
+} */
 
 form {
   background-color: white;
@@ -76,4 +79,18 @@ form button:hover {
   color: rgb(41, 42, 52);
   background-color: white;
   border: 1px solid rgb(41, 42, 52);
+}
+
+.forgot-password-a {
+  display: block;
+  text-align: center; 
+  margin-top: 12px; 
+  font-size: 1.05rem;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.forgot-password-a:hover {
+  color: var(--dark-primary-color);
+  text-decoration: underline;
 }
