--- a/public/css/order.css
+++ b/public/css/order.css
@@ -1,260 +1,553 @@
-    main {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
 
-    main>div:nth-child(1) {
-      width: 100%;
-      min-height: 60px;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: end;
-    }
+main>div:nth-child(1) {
+  width: 100%;
+  min-height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+}
 
-    main .orders-container {
-      flex: 1;
-      background-color: white;
-      border-radius: 8px;
-      padding: 10px 20px;
-      color: var(--primary-color);
-      box-shadow: var(--shadow);
-      display: flex;
-      flex-direction: column;
-    }
+main .orders-container {
+  flex: 1;
+  background-color: white;
+  border-radius: 8px;
+  padding: 10px 20px;
+  color: var(--primary-color);
+  box-shadow: var(--shadow);
+  display: flex;
+  flex-direction: column;
+}
 
-    .btn-container .add-order-btn {
-      background-color: var(--primary-color);
-      border: none;
-      color: white;
-      font-size: 1.2rem;
-      padding: 12px 20px;
-      border-radius: 8px;
-    }
+.btn-container .add-order-btn {
+  background-color: var(--primary-color);
+  border: none;
+  color: white;
+  font-size: 1.2rem;
+  padding: 12px 20px;
+  border-radius: 8px;
+}
 
-    .btn-container .category-btns-container{
-      display: flex;
-      gap: 16px;
-      padding: 8px 16px;
-    }
+.btn-container .category-btns-container{
+  display: flex;
+  gap: 16px;
+  padding: 8px 16px;
+}
 
-    .btn-container .category-btns-container button {
-      background-color: transparent;
-      border: none;
-      border-bottom: 3px solid #24304136;
-      color: #24304136;
-      padding: 4px;
-      font-size: 1.05rem;
-    }
+.btn-container .category-btns-container button {
+  background-color: transparent;
+  border: none;
+  border-bottom: 3px solid #24304136;
+  color: #24304136;
+  padding: 4px;
+  font-size: 1.05rem;
+}
 
-    .btn-container .category-btns-container button:hover {
-      border-bottom: 3px solid #24304186;
-      color: #24304186;
-    }
+.btn-container .category-btns-container button:hover {
+  border-bottom: 3px solid #24304186;
+  color: #24304186;
+}
 
-    .btn-container .category-btns-container button.selected {
-      border-bottom-color: var(--primary-color);
-      color: var(--primary-color);
-    }
+.btn-container .category-btns-container button.selected {
+  border-bottom-color: var(--primary-color);
+  color: var(--primary-color);
+}
 
-    main .orders-container h2 {
-      margin-bottom: 12px;
-    }
+main .orders-container h2 {
+  margin-bottom: 12px;
+}
 
-    main .orders-container .table-container {
-      width: 100%;
-      max-height: 550px;
-      overflow-y: auto;
-      display: flex;
-      border-radius: 8px;
-    }
+main .orders-container .table-container {
+  width: 100%;
+  max-height: 550px;
+  overflow-y: auto;
+  display: flex;
+  border-radius: 8px;
+}
 
-    dialog {
-      background-color: white;
-      border: none;
-      outline: none;
-      border-radius: 8px;
-      padding: 16px 32px 16px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -60%);
-      transition: all 0.3s ease-out;
-      display: flex;
-      gap: 32px;
-      background-color: transparent;
-      display: none;
-    }
+dialog {
+  background-color: white;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  padding: 16px 32px 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  transition: all 0.3s ease-out;
+  display: flex;
+  gap: 32px;
+  background-color: transparent;
+  display: none;
+}
 
-    #update_payment_modal {
-      background-color: white;
-      flex-direction: column;
-      gap: 8px;
-    }
+#update_payment_modal {
+  background-color: white;
+  flex-direction: column;
+  gap: 8px;
+}
 
-    dialog .add-order-form {
-      width: 700px;
-      display: flex;
-      gap: 20px;
-    }
+dialog .add-order-form {
+  width: 700px;
+  display: flex;
+  gap: 20px;
+}
 
-    dialog .add-order-form .customer-info,
-    dialog .add-order-form .order-info {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
+dialog .add-order-form .customer-info,
+dialog .add-order-form .order-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
 
-    dialog .add-order-form .customer-info > div,
-    dialog .add-order-form .order-info > div {
-      margin-top: 16px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      flex: 1;
-    }
+dialog .add-order-form .customer-info > div,
+dialog .add-order-form .order-info > div {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 1;
+}
 
-    #add_order_modal form {
-      background-color: white;
-      padding: 16px 32px;
-      border-radius: 8px;
-    }
+#add_order_modal form {
+  background-color: white;
+  padding: 16px 32px;
+  border-radius: 8px;
+}
 
-    #add_order_modal .upcomming-order-div {
-      width: 300px;
-      max-width: 300px;
-      background-color: white;
-      border-radius: 8px;
-      padding: 16px 32px;
-      display: flex;
-      gap: 20px;
-      flex-direction: column;
-    }
+#add_order_modal .upcomming-order-div {
+  width: 300px;
+  max-width: 300px;
+  background-color: white;
+  border-radius: 8px;
+  padding: 16px 32px;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
 
-    #add_order_modal .upcomming-order-div .upcomming-order-container {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      max-height: 363px;
-      overflow: auto;
-      border-radius: 8px;
-      flex: 1;
-      padding: 0px 8px;
-    }
+#add_order_modal .upcomming-order-div .upcomming-order-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  max-height: 363px;
+  overflow: auto;
+  border-radius: 8px;
+  flex: 1;
+  padding: 0px 8px;
+}
 
-    .upcomming-order-container .order {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-radius: 8px;
-      border: none;
-      padding: 16px;
-      background-color: var(--primary-color);
-      color: white;
-      transition: all 0.3s;
-    }
+.upcomming-order-container .order {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 8px;
+  border: none;
+  padding: 16px;
+  background-color: var(--primary-color);
+  color: white;
+  transition: all 0.3s;
+}
 
-    .upcomming-order-container .order:hover {
-      background-color: var(--dark-primary-color);
-    }
-    
-    .upcomming-order-container .order button {
-      border-radius: 90px;
-      border: none;
-      background-color: transparent;
-      font-size: 1.3rem;
-      color: white;
-    }
+.upcomming-order-container .order:hover {
+  background-color: var(--dark-primary-color);
+}
 
-    .upcomming-order-container .order button:hover {
-      font-weight: 700;
-    }
+.upcomming-order-container .order button {
+  border-radius: 90px;
+  border: none;
+  background-color: transparent;
+  font-size: 1.3rem;
+  color: white;
+}
+
+.upcomming-order-container .order button:hover {
+  font-weight: 700;
+}
 
 
-    .update_payment_modal > h2 {
-      margin-bottom: 12px;
-    }
+.update_payment_modal > h2 {
+  margin-bottom: 12px;
+}
 
-    .add-order-form .input-field input,
-    .add-order-form .input-field select,
-    .update-payment-form .input-field input {
-      width: 100%;
-      outline: none;
-      border: 1px solid #D9D9D9;
-      border-radius: 8px;
-      font-size: 0.9rem;
-      padding: 8px 12px;
-    }
+.add-order-form .input-field input,
+.add-order-form .input-field select,
+.update-payment-form .input-field input {
+  width: 100%;
+  outline: none;
+  border: 1px solid #D9D9D9;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  padding: 8px 12px;
+}
 
-    .add-order-form .btn-container,
-    .update-payment-form .btn-container {
-      padding-top: 12px;
-      width: 100%;
-      grid-column: 2 / -1;
-      display: flex;
-      justify-content: end;
-      align-items: end;
-      gap: 8px;
-      flex: 1;
-    }
+.add-order-form .btn-container,
+.update-payment-form .btn-container {
+  padding-top: 12px;
+  width: 100%;
+  grid-column: 2 / -1;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 8px;
+  flex: 1;
+}
 
-    .upcomming-order-div .btn-container {
-      width: 100%;
-      grid-column: 2 / -1;
-      display: flex;
-      justify-content: end;
-      align-items: end;
-      gap: 8px;
-    }
+.upcomming-order-div .btn-container {
+  width: 100%;
+  grid-column: 2 / -1;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 8px;
+}
 
-    .add-order-form .btn-container button,
-    .upcomming-order-div .btn-container button,
-    .update-payment-form .btn-container button {
-      font-size: 0.9rem;
-      padding: 12px;
-      width: 100%;
-      border-radius: 8px;
-      border: none;
-    }
+.add-order-form .btn-container button,
+.upcomming-order-div .btn-container button,
+.update-payment-form .btn-container button {
+  font-size: 0.9rem;
+  padding: 12px;
+  width: 100%;
+  border-radius: 8px;
+  border: none;
+}
 
-    .add-order-form .btn-container button[type='button']:hover,
-    .update-payment-form .btn-container button:hover {
-      background-color: #c6c2c2;
-    }
+.add-order-form .btn-container button[type='button']:hover,
+.update-payment-form .btn-container button:hover {
+  background-color: #c6c2c2;
+}
 
-    .add-order-form .btn-container #add_order_btn,
-    .upcomming-order-div .btn-container button,
-    .update-payment-form .btn-container button[type='submit'] {
-      background-color: var(--primary-color);
-      color: white;
-    }
+.add-order-form .btn-container #add_order_btn,
+.upcomming-order-div .btn-container button,
+.update-payment-form .btn-container button[type='submit'] {
+  background-color: var(--primary-color);
+  color: white;
+}
 
-    .add-order-form .btn-container #add_order_btn:hover,
-    .upcomming-order-div .btn-container button:hover,
-    .update-payment-form .btn-container button[type='submit']:hover {
-      background-color: var(--dark-primary-color);
-    }
+.add-order-form .btn-container #add_order_btn:hover,
+.upcomming-order-div .btn-container button:hover,
+.update-payment-form .btn-container button[type='submit']:hover {
+  background-color: var(--dark-primary-color);
+}
 
-    .upcomming-order-div .btn-container #confirm_orders {
-      font-size: 1.3rem;
-    }
+.upcomming-order-div .btn-container #confirm_orders {
+  font-size: 1.3rem;
+}
 
-    .datetime-field {
-      display: flex;
-      gap: 8px;
-    }
+.datetime-field {
+  display: flex;
+  gap: 8px;
+}
 
-    .datetime-field input:nth-child(1) {
-      flex: 2;
-    }
+.datetime-field input:nth-child(1) {
+  flex: 2;
+}
 
-    .datetime-field input:nth-child(2) {
-      flex: 1;
-    }
+.datetime-field input:nth-child(2) {
+  flex: 1;
+}
 
-    .order-operations {
-      display: flex;
-      gap: 8px;
-    }
+.order-operations {
+  display: flex;
+  gap: 8px;
+}
+
+.orders-tbl th {
+  background-color: var(--primary-color);
+  font-weight: bold;
+}
+
+.orders-tbl td:last-child {
+  text-align: right;
+}
+
+
+
+/* Responsive design for 1024px */
+@media (max-width: 1024px) {
+
+  #add_order_modal {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  dialog .add-order-form {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  #add_order_modal .upcomming-order-div {
+    max-width: none;
+    width: 100%;
+    min-height: 500px;
+  }
+
+  .btn-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+
+  .category-btns-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .orders-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+
+  main .orders-container .table-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    max-height:none;
+  }
+
+  .orders-tbl {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: none;
+  }
+
+  .orders-tbl thead {
+    display: none; /* Hide table header */
+  }
+
+  .orders-tbl tbody {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  .orders-tbl tr {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: 1px solid var(--primary-color);
+    border-radius: 8px;
+    padding: 10px;
+  }
+
+  .orders-tbl td {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 10px;
+    border: none;
+  }
+
+  .orders-tbl td:first-child {
+    font-weight: bold;
+  }
+
+  .orders-tbl td:last-child {
+    text-align: left;
+    max-height: 100px;
+  }
+}
+
+/* Responsive design for 800px */
+@media (max-width: 800px) {
+  .btn-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+
+  .category-btns-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .orders-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+
+  main .orders-container .table-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  .orders-tbl {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: none;
+  }
+
+  .orders-tbl thead {
+    display: none; /* Hide table header */
+  }
+
+  .orders-tbl tbody {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  .orders-tbl tr {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: 1px solid var(--primary-color);
+    border-radius: 8px;
+    padding: 10px;
+  }
+
+  .orders-tbl td {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 10px;
+    border: none;
+  }
+
+  .orders-tbl td:first-child {
+    font-weight: bold;
+  }
+
+  .orders-tbl td:last-child {
+    text-align: left;
+  }
+}
+
+/* Responsive design for 425px */
+@media (max-width: 425px) {
+  .btn-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  .category-btns-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .orders-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  main .orders-container .table-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 8px;
+  }
+
+  .orders-tbl {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: none;
+  }
+
+  .orders-tbl thead {
+    display: none; /* Hide table header */
+  }
+
+  .orders-tbl tbody {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 8px;
+  }
+
+  .orders-tbl tr {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: 1px solid var(--primary-color);
+    border-radius: 8px;
+    padding: 8px;
+  }
+
+  .orders-tbl td {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    border: none;
+  }
+
+  .orders-tbl td:first-child {
+    font-weight: bold;
+  }
+
+  .orders-tbl td:last-child {
+    text-align: left;
+  }
+}
+
+/* Responsive design for 375px */
+@media (max-width: 375px) {
+  .btn-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 8px;
+  }
+
+  .category-btns-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .orders-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 8px;
+  }
+
+  .table-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 6px;
+  }
+
+  .orders-tbl {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: none;
+  }
+
+  .orders-tbl thead {
+    display: none; /* Hide table header */
+  }
+
+  .orders-tbl tbody {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 6px;
+  }
+
+  .orders-tbl tr {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: 1px solid var(--primary-color);
+    border-radius: 8px;
+    padding: 6px;
+  }
+
+  .orders-tbl td {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    border: none;
+  }
+
+  .orders-tbl td:first-child {
+    font-weight: bold;
+  }
+
+  .orders-tbl td:last-child {
+    text-align: left;
+  }
+}
